# lai_franka_moveit

./: README.md
additional_files/: multi_planner.cpp
additional_files/franka_description/end_effectors/common/: franka_hand_filter.xacro  utils_filter.xacro
additional_files/franka_description/end_effectors/franka_hand/: franka_hand.srdf.xacro
additional_files/franka_description/robots/common/: franka_arm_filter.xacro  franka_robot_filter.xacro  utils_filter.xacro
additional_files/franka_description/robots/fr3/: fr3_filter.urdf.xacro
additional_files/franka_gripper/config/: franka_gripper_node.yaml
additional_files/franka_gripper/src/: gripper_action_server.cpp
additional_files/moveit_task_constructor/core/src/solvers/: multi_planner.cpp
additional_files/old_files/: safety_mtc.cpp  safety_mtc.launch.py
additional_files/robot_self_filter/: CMakeLists.txt
additional_files/robot_self_filter/src/: self_filter.cpp
additional_files/robot_self_filter_backup/: CMakeLists.txt
backup_folder/: object_finder copy.cpp
franka_moveit/: CMakeLists.txt  package.xml
franka_moveit/include/franka_moveit/: bridge_franka.hpp  cloud_transform.hpp  object_finder.hpp  object_remover.hpp  octomap_generator.hpp  outlier_filter.hpp  utils.hpp
franka_moveit/launch/: bridge_franka.launch.py  explore_nullspace.launch.py  fr3_moveit_controller.launch.py  franka.launch.py  object_finder.launch.py  panda_moveit.launch.py  perception.launch.py  rs.launch.py  self_filter.launch.py  simple.launch.py  statistic_exp.launch.py
franka_moveit/src/: additional_setup.cpp  bridge_franka.cpp  cloud_transform.cpp  explore_nullspace.cpp  franka_moveit.cpp  object_finder.cpp  object_remover.cpp  octomap_generator.cpp  outlier_filter.cpp  simple_movement.cpp  statistic_exp.cpp
franka_moveit_config/: .setup_assistant  package.xml
franka_moveit_config/config/: apriltag.yaml  fr3.ros2_control.xacro  fr3.srdf  fr3_ros_controllers.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  octomap.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  robot_filter.yaml  ros2_controllers.yaml  sensors_3d.yaml  task_planning.yaml
franka_moveit_msg/: CMakeLists.txt  package.xml
franka_moveit_msg/srv/: EnableCreate.srv
franka_moveit_mtc/: CMakeLists.txt  package.xml
franka_moveit_mtc/launch/: claude.launch.py  modular_mtc.launch.py  palette_mtc.launch.py  round_trip_mtc.launch.py
franka_moveit_mtc/src/: claude.cpp  modular_mtc.cpp  palette_mtc.cpp  round_trip_mtc.cpp  safety_mtc.cpp
franka_moveit_planner/: CMakeLists.txt  package.xml  plugin_description.xml
franka_moveit_planner/include/franka_moveit_planner/: task_planner_manager.hpp  task_planning_context.hpp
franka_moveit_planner/src/: task_planner_manager.cpp  task_planning_context.cpp
